# homework3

./: README.md  pyproject.toml  requirements.txt
data/: train_labels.pt
results/: metrics.csv
src/: config.py  evaluate.py  model.py  preprocess.py  train.py  utils.py
